==============
lxml changelog
==============

Under development
=================

Features added
--------------

* New options for exclusive C14N and C14N without comments.

* Instantiating a custom Element classes creates a new Element.

Bugs fixed
----------

* Overriding the parser encoding didn't work for many encodings.

* 0-bytes could slip through the API when used inside of Unicode
  strings.

Other changes
-------------


2.1.2 (2008-09-05)
==================

Features added
--------------

* lxml.etree now tries to find the absolute path name of files when
  parsing from a file-like object.  This helps custom resolvers when
  resolving relative URLs, as lixbml2 can prepend them with the path
  of the source document.

Bugs fixed
----------

* Memory problem when passing documents between threads.

* Target parser did not honour the ``recover`` option and raised an
  exception instead of calling ``.close()`` on the target.

Other changes
-------------


2.0.9 (2008-09-05)
==================

Bugs fixed
----------

* Memory problem when passing documents between threads.

* Target parser did not honour the ``recover`` option and raised an
  exception instead of calling ``.close()`` on the target.


2.1.1 (2008-07-24)
==================

Features added
--------------

Bugs fixed
----------

* Crash when parsing XSLT stylesheets in a thread and using them in
  another.

* Encoding problem when including text with ElementInclude under
  Python 3.

Other changes
-------------


2.0.8 (2008-07-24)
==================

Features added
--------------

* ``lxml.html.rewrite_links()`` strips links to work around documents
  with whitespace in URL attributes.

Bugs fixed
----------

* Crash when parsing XSLT stylesheets in a thread and using them in
  another.

* CSS selector parser dropped remaining expression after a function
  with parameters.

Other changes
-------------


2.1 (2008-07-09)
================

Features added
--------------
